fixing sponsor logos on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4469,12 +4469,14 @@ header.sticky {
 }
 
 .sponsor__gold img {
-  width: 300px;
+  width: 100%;
+  max-width: 240px;
 }
 
 @media only screen and (min-width: 768px) {
   .sponsor__gold img {
     margin-top: 10px;
+    max-width: 300px;
   }
 }
 
